# LLM-robotics

./: .gitignore  CONNECT_STAGE_OPTIMIZATION.md  EXECUTION_FIX_GUIDE.md  MTC_UF850_USAGE_GUIDE.md  MTC_USAGE_GUIDE.md  OMPL_TIMESTAMP_FIX.md  PICK_PLANNING_OPTIMIZATION.md  PLANNING_OPTIMIZATION_GUIDE.md  POUR_POSITION_CONFIG.md  REAL_ROBOT_EXECUTION_FIX.md  TECHNICAL_COMPARISON.md  TRAJECTORY_EXECUTION_FIX.md  frames_2025-07-31_12.47.49.gv  simple_genesis_mcp.py  start_mtc_demo.sh
install/: local_setup.sh  setup.sh
install/aruco/include/aruco/: aruco.h  aruco_cvversioning.h  aruco_export.h  cameraparameters.h  cvdrawingutils.h  debug.h  dictionary.h  dictionary_based.h  fractaldetector.h  ippe.h  levmarq.h  marker.h  markerdetector.h  markerdetector_impl.h  markerlabeler.h  markermap.h  picoflann.h  posetracker.h  timers.h
install/aruco/share/aruco/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/aruco_msgs/share/aruco_msgs/: local_setup.sh  package.sh
install/aruco_ros/lib/aruco_ros/: double  marker_publisher  single
install/aruco_ros/share/aruco_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/d435i_xarm_setup/lib/d435i_xarm_setup/: findobj_grasp_moveit_planner  findobj_grasp_xarm_api  tf_object_to_base
install/d435i_xarm_setup/share/d435i_xarm_setup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/easy_handeye2/share/easy_handeye2/: package.sh
install/easy_handeye2_msgs/share/easy_handeye2_msgs/: package.sh
install/mbot_demo/share/mbot_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/moveit_task_constructor_capabilities/share/moveit_task_constructor_capabilities/: capabilities_plugin_description.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/moveit_task_constructor_visualization/lib/: libmotion_planning_tasks_rviz_plugin.so.0.1.3  libmoveit_task_visualization_tools.so.0.1.3
log/: latest_build  latest_list
src/: charuco_publisher.py  find_id.py  rgbd_to_cup_pose.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/mtc_tutorial/: CMakeLists.txt
src/mtc_tutorial/include/mtc_tutorial/: pour_task_builder.hpp
src/mtc_tutorial/launch/: pour_demo.launch.py
src/mtc_tutorial/scripts/: check_moveit_config.py  pour_client.py  pour_tool.py
src/mtc_tutorial/src/: execute_pour_server.cpp  mtc_tutorial.cpp  pour_task_builder.cpp
(+2261 files in other folders)
